--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -10,3 +10,37 @@
 .center-text {
   text-align: center;
 }
+
+hr {
+  display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+button {
+  background: #FB8C00;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+button:disabled {
+  background: #FFE0B2;
+}
+
+.left-align {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/*handle keyboard navigators*/
+body:not(.user-is-tabbing) button:focus,
+body:not(.user-is-tabbing) input:focus,
+body:not(.user-is-tabbing) select:focus,
+body:not(.user-is-tabbing) textarea:focus {
+  outline: none;
+}
