--- a/src/css/NewPoll.css
+++ b/src/css/NewPoll.css
@@ -1,13 +1,12 @@
 form {
-  border-radius: 3px;
+  border-radius: 0px 0px 3px 3px;
   background: white;
-  padding: 20px;
-  margin-top: 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  padding: 16px;
+  margin-top: 16px;
 }
 
-h3 {
-  margin: 0;
+.new-header {
+  margin: 0px 0px 16px 0px;
 }
 
 .row {
@@ -23,9 +22,14 @@ h3 {
 
 .textarea {
   width: 47%;
+  font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 3px;
-  padding: 5px;
+  padding: 8px;
+}
+
+.textarea:focus {
+  border: 1px solid #1E88E5;
 }
 
 .submit-button {
