--- a/src/css/Poll.css
+++ b/src/css/Poll.css
@@ -6,7 +6,7 @@
   background: white;
   border-radius: 3px;
   overflow: hidden;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
 
 .poll-options {
@@ -18,10 +18,11 @@
 }
 
 .option-one, .option-two {
+  height: 250px;
+  padding: 16px 32px;
   width: 50%;
-  padding: 60px;
   text-align: center;
-  color: rgba(255,255,255,0.7);
+  color: rgba(255,255,255,0.8);
   font-size: 26px;
   display: flex;
   align-items: center;
@@ -29,7 +30,7 @@
 }
 
 .option-one {
-  background: #e53935;
+  background: #00ACC1;
   position: relative;
 }
 
@@ -50,11 +51,16 @@
 }
 
 .option-two {
-  background: #00ACC1;
+  background: #5E35B1;
 }
 
 .poll-data {
-  padding: 15px 20px 20px 20px;
+  padding: 16px;
+}
+
+.poll-text {
+  margin: 0;
+  padding-top: 16px;
 }
 
 .poll-votes {
@@ -65,6 +71,7 @@
 
 .poll-info {
   margin: 0px;
+  padding-bottom: 16px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -83,5 +90,5 @@
 }
 
 .choice {
-  font-size: 36px;
+  font-size: 38px;
 }
