--- a/src/css/NewPoll.css
+++ b/src/css/NewPoll.css
@@ -9,6 +9,11 @@ form {
   margin: 0px 0px 16px 0px;
 }
 
+.sub-header {
+  margin: 0px;
+  padding: 10px 0px;
+}
+
 .row {
   display: flex;
   justify-content: space-between;
