--- a/src/css/Poll.css
+++ b/src/css/Poll.css
@@ -6,7 +6,6 @@
   background: white;
   border-radius: 3px;
   overflow: hidden;
-  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
 
 .poll-options {
@@ -55,12 +54,12 @@
 }
 
 .poll-data {
-  padding: 16px;
+  padding: 10px 16px;
 }
 
 .poll-text {
   margin: 0;
-  padding-top: 16px;
+  padding-top: 10px;
 }
 
 .poll-votes {
