--- a/src/css/Results.css
+++ b/src/css/Results.css
@@ -1,8 +1,15 @@
 .scoreboard {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .score-col {
   width: 50%;
   padding: 0px 16px;
+}
+
+.another-poll {
+  width: 100%;
+  padding: 16px;
+  text-align: center;
 }
