--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -14,9 +14,21 @@
   list-style-type: none;
 }
 
+.nav-bar li {
+  margin-right: 32px;
+}
+
 .nav-link {
   display: block;
-  padding: 20px;
+  padding: 23px 0px 20px 0px;
+  border-bottom: 3px solid #333;
   color: white;
   text-decoration: none;
+}
+
+.sign-out {
+  padding: 10px;
+  border-radius: 0px;
+  background: none;
+  font-size: 16px;
 }
