--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -2,17 +2,22 @@
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 800px;
-  margin: 0px auto;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #f7f7f7;
+  padding-bottom: 20px;
 }
 
-.center-text {
-  text-align: center;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-  color: #2196F3;
+  color: #FFC107;
 }
 
 hr {
@@ -25,7 +30,7 @@ hr {
 }
 
 button {
-  background: #2196F3;
+  background: #FFC107;
   color: white;
   border: none;
   border-radius: 3px;
@@ -33,7 +38,16 @@ button {
 }
 
 button:disabled {
-  background: #E3F2FD;
+  background: #faedc5;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0px auto;
+}
+
+.center-text {
+  text-align: center;
 }
 
 .left-align {
